--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello Coursera!</title>
+    <meta name='viewport' content="width=device-width, initial-scalre=1.0">
+    <title></title>
   </head>
   <body>
-    <h1>Hello Coursera! Its a great course!</h1>
+    <h1> This is the title </h1>
+    <div class="container">
+      <div class="row">
+        <div>Block one with text</div>
+        <div>Block two with text</div>
+        <div>Block three with text</div>
+      </div> 
+    </div> 
   </body>
 </html>
