--- a/site/index.html
+++ b/site/index.html
@@ -9,9 +9,9 @@
     <h1> This is the title </h1>
     <div class="container">
       <div class="row">
-        <div>Block one with text</div>
-        <div>Block two with text</div>
-        <div>Block three with text</div>
+        <div class='col-lg-4 col-md-6 col-sm-12' style='background-color: blue;' >Block one with text</div>
+        <div class='col-lg-4 col-md-6 col-sm-12' style='background-color: yellow;' >Block two with text</div>
+        <div class='col-lg-4 col-md-6 col-sm-12' style='background-color: purple;' >Block three with text</div>
       </div> 
     </div> 
   </body>
