--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello Coursera!</title>
+    <meta name='viewport' content="width=device-width, initial-scalre=1.0">
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="/css/file.css">
   </head>
   <body>
-    <h1>Hello Coursera! Its a great course!</h1>
+    <h1> This is the totally original title </h1>
+    <div class="container">
+      <div class="row">
+        <div class='col-lg-4 col-md-6 col-sm-12'><div id="bigbox"><span id="box">Box 1</span><p>Block one with description: box, box, box, box, box, box, box, box, box, box, box, box, box, box, box, box.</p></div></div>
+        <div class='col-lg-4 col-md-6 col-sm-12'><div id="bigbox"><span id="box">Box 2</span><p>Block two with description: box, box, box, box, box, box, box, box, box, box, box, box, box, box, box, box.</p></div></div>
+        <div class='col-lg-4 col-md-12 col-sm-12'><div id="bigbox"><span id="box">Box 3</span><p id="lastblock">Block three with description: box, box, box, box, box, box, box, box, box, box, box, box, box, box, box, box.</p></div></div>
+      </div>
+    </div>
   </body>
 </html>
