--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name='viewport' content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="https://bernardogam.github.io/Coursera-test/site/css/file.css">
+    <link rel="stylesheet" type="text/css" href="file.css">
   </head>
   <body>
     <h1> This is the totally original title </h1>
