--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name='viewport' content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="/css/file.css"/>
+    <link rel="stylesheet" type="text/css" href="css/file.css" media="screen">
   </head>
   <body>
     <h1> This is the totally original title </h1>
